Further SCSS for highlighting

--- a/themes/gron/static/css/main.css
+++ b/themes/gron/static/css/main.css
@@ -20042,7 +20042,7 @@ a.footnote-ref::after {
 
 /* KeywordType */
 .chroma .kt {
-  color: #902000; }
+  color: #015692; }
 
 /* Name */
 /* NameAttribute */
@@ -20051,17 +20051,20 @@ a.footnote-ref::after {
 
 /* NameBuiltin */
 .chroma .nb {
-  color: #015692; }
+  color: #b75501; }
 
 /* NameBuiltinPseudo */
+.chroma .bp {
+  color: #b75501; }
+
 /* NameClass */
 .chroma .nc {
-  color: #0e84b5;
+  color: #b75501;
   font-weight: 500; }
 
 /* NameConstant */
 .chroma .no {
-  color: #60add5; }
+  color: #b75501; }
 
 /* NameDecorator */
 .chroma .nd {
@@ -20070,21 +20073,21 @@ a.footnote-ref::after {
 
 /* NameEntity */
 .chroma .ni {
-  color: cadetblue;
+  color: #b75501;
   font-weight: 500; }
 
 /* NameException */
 .chroma .ne {
-  color: cadetblue; }
+  color: #b75501; }
 
 /* NameFunction */
 .chroma .nf {
-  color: cadetblue; }
+  color: #b75501; }
 
 /* NameFunctionMagic */
 /* NameLabel */
 .chroma .nl {
-  color: cadetblue;
+  color: #b75501;
   font-weight: 500; }
 
 /* NameNamespace */
@@ -20101,7 +20104,7 @@ a.footnote-ref::after {
 
 /* NameVariable */
 .chroma .nv {
-  color: cadetblue; }
+  color: #b75501; }
 
 /* NameVariableClass */
 /* NameVariableGlobal */
@@ -20175,31 +20178,31 @@ a.footnote-ref::after {
 
 /* LiteralNumber */
 .chroma .m {
-  color: cadetblue; }
+  color: #b75501; }
 
 /* LiteralNumberBin */
 .chroma .mb {
-  color: cadetblue; }
+  color: #b75501; }
 
 /* LiteralNumberFloat */
 .chroma .mf {
-  color: cadetblue; }
+  color: #b75501; }
 
 /* LiteralNumberHex */
 .chroma .mh {
-  color: cadetblue; }
+  color: #b75501; }
 
 /* LiteralNumberInteger */
 .chroma .mi {
-  color: cadetblue; }
+  color: #b75501; }
 
 /* LiteralNumberIntegerLong */
 .chroma .il {
-  color: cadetblue; }
+  color: #b75501; }
 
 /* LiteralNumberOct */
 .chroma .mo {
-  color: cadetblue; }
+  color: #b75501; }
 
 /* Operator */
 .chroma .o {
@@ -20207,7 +20210,7 @@ a.footnote-ref::after {
 
 /* OperatorWord */
 .chroma .ow {
-  color: #b75501;
+  color: #015692;
   font-weight: 500; }
 
 /* Punctuation */
