--- a/themes/gron/layouts/partials/meta_head.html
+++ b/themes/gron/layouts/partials/meta_head.html
@@ -43,6 +43,13 @@
     title="{{ printf `%s - RSS` $.Title }}"/>
 {{ end -}}
 
+<!-- highligh.js -->
+{{- if isset .Params "hljs" | and (eq (.Param "hljs") true) }}
+<link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/styles/stackoverflow-light.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+{{- end -}}
 
 <!-- MathJax support -->
 {{- if isset .Params "mathjax" | and (eq (.Param "mathjax") true) }}
