--- a/themes/gron/static/css/main.css
+++ b/themes/gron/static/css/main.css
@@ -19974,358 +19974,30 @@ a.footnote-ref::after {
   .footnotes ol a.footnote-backref:hover::after {
     text-decoration: underline; }
 
-/* Other */
-/* Error */
-/* LineTableTD */
-.chroma .lntd {
-  vertical-align: top;
-  padding: 0;
-  margin: 0;
-  border: 0; }
-
-/* LineTable */
-.chroma .lntable {
-  border-spacing: 0;
-  padding: 0;
-  margin: 0;
-  border: 0;
-  width: auto;
-  overflow: auto;
-  display: block; }
-
-/* LineHighlight */
-.chroma .hl {
-  display: block;
-  width: 100%;
-  background-color: #ffffcc; }
-
-/* LineNumbersTable */
-.chroma .lnt {
-  margin-right: 0.4em;
-  padding: 0 0.4em 0 0.4em;
-  color: #7f7f7f; }
-
-/* LineNumbers */
-.chroma .ln {
-  margin-right: 0.4em;
-  padding: 0 0.4em 0 0.4em;
-  color: #7f7f7f; }
-
-/* Keyword */
-.chroma .k {
-  color: #015692;
-  font-weight: 500; }
-
-/* KeywordConstant */
-.chroma .kc {
-  color: cadetblue;
-  font-weight: 500; }
-
-/* KeywordDeclaration */
-.chroma .kd {
-  color: #015692;
-  font-weight: 500; }
-
-/* KeywordNamespace */
-.chroma .kn {
-  color: #015692;
-  font-weight: 500; }
-
-/* KeywordPseudo */
-.chroma .kp {
-  color: #015692; }
-
-/* KeywordReserved */
-.chroma .kr {
-  color: #015692;
-  font-weight: 500; }
-
-/* KeywordType */
-.chroma .kt {
-  color: #015692; }
-
-/* Name */
-/* NameAttribute */
-.chroma .na {
-  color: #54790d; }
-
-/* NameBuiltin */
-.chroma .nb {
-  color: #b75501; }
-
-/* NameBuiltinPseudo */
-.chroma .bp {
-  color: #b75501; }
-
-/* NameClass */
-.chroma .nc {
-  color: #b75501;
-  font-weight: 500; }
-
-/* NameConstant */
-.chroma .no {
-  color: #b75501; }
-
-/* NameDecorator */
-.chroma .nd {
-  color: cadetblue;
-  font-weight: 500; }
-
-/* NameEntity */
-.chroma .ni {
-  color: #b75501;
-  font-weight: 500; }
-
-/* NameException */
-.chroma .ne {
-  color: #b75501; }
-
-/* NameFunction */
-.chroma .nf {
-  color: #b75501; }
-
-/* NameFunctionMagic */
-/* NameLabel */
-.chroma .nl {
-  color: #b75501;
-  font-weight: 500; }
-
-/* NameNamespace */
-.chroma .nn {
-  color: #015692;
-  font-weight: 500; }
-
-/* NameOther */
-/* NameProperty */
-/* NameTag */
-.chroma .nt {
-  color: #015692;
-  font-weight: 500; }
-
-/* NameVariable */
-.chroma .nv {
-  color: #b75501; }
-
-/* NameVariableClass */
-/* NameVariableGlobal */
-/* NameVariableInstance */
-/* NameVariableMagic */
-/* Literal */
-.chroma .l {
-  color: #54790d; }
-
-/* LiteralDate */
-.chroma .ld {
-  color: #54790d; }
-
-/* LiteralString */
-.chroma .s {
-  color: #54790d; }
-
-/* LiteralStringAffix */
-.chroma .sa {
-  color: #54790d; }
-
-/* LiteralStringBacktick */
-.chroma .sb {
-  color: #54790d; }
-
-/* LiteralStringChar */
-.chroma .sc {
-  color: #54790d; }
-
-/* LiteralStringDelimiter */
-.chroma .dl {
-  color: #54790d; }
-
-/* LiteralStringDoc */
-.chroma .sd {
-  color: #54790d; }
-
-/* LiteralStringDouble */
-.chroma .s2 {
-  color: #54790d; }
-
-/* LiteralStringEscape */
-.chroma .se {
-  color: #54790d;
-  font-weight: 500; }
-
-/* LiteralStringHeredoc */
-.chroma .sh {
-  color: #54790d; }
-
-/* LiteralStringInterpol */
-.chroma .si {
-  color: #54790d;
-  font-style: italic; }
-
-/* LiteralStringOther */
-.chroma .sx {
-  color: #54790d; }
-
-/* LiteralStringRegex */
-.chroma .sr {
-  color: #54790d; }
-
-/* LiteralStringSingle */
-.chroma .s1 {
-  color: #54790d; }
-
-/* LiteralStringSymbol */
-.chroma .ss {
-  color: #517918; }
-
-/* LiteralNumber */
-.chroma .m {
-  color: #b75501; }
-
-/* LiteralNumberBin */
-.chroma .mb {
-  color: #b75501; }
-
-/* LiteralNumberFloat */
-.chroma .mf {
-  color: #b75501; }
-
-/* LiteralNumberHex */
-.chroma .mh {
-  color: #b75501; }
-
-/* LiteralNumberInteger */
-.chroma .mi {
-  color: #b75501; }
-
-/* LiteralNumberIntegerLong */
-.chroma .il {
-  color: #b75501; }
-
-/* LiteralNumberOct */
-.chroma .mo {
-  color: #b75501; }
-
-/* Operator */
-.chroma .o {
-  color: #606060; }
-
-/* OperatorWord */
-.chroma .ow {
-  color: #015692;
-  font-weight: 500; }
-
-/* Punctuation */
-/* Comment */
-.chroma .c {
-  color: #606060; }
-
-/* CommentHashbang */
-.chroma .ch {
-  color: #606060; }
-
-/* CommentMultiline */
-.chroma .cm {
-  color: #606060; }
-
-/* CommentSingle */
-.chroma .c1 {
-  color: #606060; }
-
-/* CommentSpecial */
-.chroma .cs {
-  color: #606060; }
-
-/* CommentPreproc */
-.chroma .cp {
-  color: #015692; }
-
-/* CommentPreprocFile */
-.chroma .cpf {
-  color: #015692; }
-
-/* Generic */
-/* GenericDeleted */
-.chroma .gd {
-  color: #a00000; }
-
-/* GenericEmph */
-.chroma .ge {
-  font-style: italic; }
-
-/* GenericError */
-.chroma .gr {
-  color: #ff0000; }
-
-/* GenericHeading */
-.chroma .gh {
-  color: #000080;
-  font-weight: 500; }
-
-/* GenericInserted */
-.chroma .gi {
-  color: #00a000; }
-
-/* GenericOutput */
-.chroma .go {
-  color: #888888; }
-
-/* GenericPrompt */
-.chroma .gp {
-  color: #c65d09;
-  font-weight: 500; }
-
-/* GenericStrong */
-.chroma .gs {
-  font-weight: bold; }
-
-/* GenericSubheading */
-.chroma .gu {
-  color: #800080;
-  font-weight: 500; }
-
-/* GenericTraceback */
-.chroma .gt {
-  color: #0044dd; }
-
-/* GenericUnderline */
-.chroma .gl {
-  text-decoration: underline; }
-
-/* TextWhitespace */
-.chroma .w {
-  color: #bbbbbb; }
-
-.chroma {
-  background-color: #f2f2f2; }
-
-div.highlight {
+code.hljs {
+  background-color: #f2f2f2;
   border-style: solid;
   border-width: 1px;
   border-color: #c2c2c2;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
+  padding: 3px 5px;
   margin: 0rem 0rem 1rem;
   /* See https://stackoverflow.com/questions/12403998/border-is-cutting-off-when-using-border-radius */
   overflow: hidden;
   /* See https://forum.webflow.com/t/safari-not-hiding-overflow-on-rounded-corner-divs/55060/2 */
   -webkit-mask-image: -webkit-radial-gradient(white, black); }
-  div.highlight code {
-    font-size: 95%;
-    display: inline-block;
-    min-width: 100%; }
-    @media (min-width: 768px) {
-      div.highlight code {
-        font-size: 85%; } }
-
-pre.chroma {
-  padding: 3px 5px;
-  margin: 0; }
   @media (min-width: 768px) {
-    pre.chroma {
+    code.hljs {
       padding: 5px 9px; } }
 
-.chroma code {
-  display: inline-block;
-  min-width: 100%; }
+pre,
+code {
+  font-size: 95%; }
+  @media (min-width: 768px) {
+    pre,
+    code {
+      font-size: 85%; } }
 
 /*# sourceMappingURL=main.css.map */
