--- a/themes/gron/static/css/main.css
+++ b/themes/gron/static/css/main.css
@@ -1208,35 +1208,38 @@ pre {
 
   .offset-xl-11 {
     margin-left: 91.6666666667%; } }
-.table {
+.table, .main-text-container .post-table table {
   width: 100%;
   max-width: 100%;
   margin-bottom: 1rem;
   background-color: transparent; }
-  .table th,
-  .table td {
+  .table th, .main-text-container .post-table table th,
+  .table td,
+  .main-text-container .post-table table td {
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #dee2e6; }
-  .table thead th {
+  .table thead th, .main-text-container .post-table table thead th {
     vertical-align: bottom;
     border-bottom: 2px solid #dee2e6; }
-  .table tbody + tbody {
+  .table tbody + tbody, .main-text-container .post-table table tbody + tbody {
     border-top: 2px solid #dee2e6; }
-  .table .table {
+  .table .table, .main-text-container .post-table table .table, .table .main-text-container .post-table table, .main-text-container .post-table .table table, .main-text-container .post-table table table {
     background-color: #fff; }
 
 .table-sm th,
 .table-sm td {
   padding: 0.3rem; }
 
-.table-bordered {
+.table-bordered, .main-text-container .post-table table {
   border: 1px solid #dee2e6; }
-  .table-bordered th,
-  .table-bordered td {
+  .table-bordered th, .main-text-container .post-table table th,
+  .table-bordered td,
+  .main-text-container .post-table table td {
     border: 1px solid #dee2e6; }
-  .table-bordered thead th,
-  .table-bordered thead td {
+  .table-bordered thead th, .main-text-container .post-table table thead th,
+  .table-bordered thead td,
+  .main-text-container .post-table table thead td {
     border-bottom-width: 2px; }
 
 .table-striped tbody tr:nth-of-type(odd) {
@@ -1344,11 +1347,11 @@ pre {
   .table-hover .table-active:hover > th {
     background-color: rgba(0, 0, 0, 0.075); }
 
-.table .thead-dark th {
+.table .thead-dark th, .main-text-container .post-table table .thead-dark th {
   color: #fff;
   background-color: #212529;
   border-color: #32383e; }
-.table .thead-light th {
+.table .thead-light th, .main-text-container .post-table table .thead-light th {
   color: #495057;
   background-color: #e9ecef;
   border-color: #dee2e6; }
@@ -1360,7 +1363,7 @@ pre {
   .table-dark td,
   .table-dark thead th {
     border-color: #32383e; }
-  .table-dark.table-bordered {
+  .table-dark.table-bordered, .main-text-container .post-table table.table-dark {
     border: 0; }
   .table-dark.table-striped tbody tr:nth-of-type(odd) {
     background-color: rgba(255, 255, 255, 0.05); }
@@ -1374,7 +1377,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-sm > .table-bordered {
+    .table-responsive-sm > .table-bordered, .main-text-container .post-table .table-responsive-sm > table {
       border: 0; } }
 @media (max-width: 767.98px) {
   .table-responsive-md {
@@ -1383,7 +1386,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-md > .table-bordered {
+    .table-responsive-md > .table-bordered, .main-text-container .post-table .table-responsive-md > table {
       border: 0; } }
 @media (max-width: 991.98px) {
   .table-responsive-lg {
@@ -1392,7 +1395,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-lg > .table-bordered {
+    .table-responsive-lg > .table-bordered, .main-text-container .post-table .table-responsive-lg > table {
       border: 0; } }
 @media (max-width: 1199.98px) {
   .table-responsive-xl {
@@ -1401,7 +1404,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-xl > .table-bordered {
+    .table-responsive-xl > .table-bordered, .main-text-container .post-table .table-responsive-xl > table {
       border: 0; } }
 .table-responsive {
   display: block;
@@ -1409,7 +1412,7 @@ pre {
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar; }
-  .table-responsive > .table-bordered {
+  .table-responsive > .table-bordered, .main-text-container .post-table .table-responsive > table {
     border: 0; }
 
 .form-control {
@@ -6496,14 +6499,16 @@ a.text-dark:hover, a.text-dark:focus {
   .badge {
     border: 1px solid #000; }
 
-  .table {
+  .table, .main-text-container .post-table table {
     border-collapse: collapse !important; }
-    .table td,
-    .table th {
+    .table td, .main-text-container .post-table table td,
+    .table th,
+    .main-text-container .post-table table th {
       background-color: #fff !important; }
 
-  .table-bordered th,
-  .table-bordered td {
+  .table-bordered th, .main-text-container .post-table table th,
+  .table-bordered td,
+  .main-text-container .post-table table td {
     border: 1px solid #ddd !important; } }
 /*!
  * Bootstrap v4.0.0 (https://getbootstrap.com)
@@ -7715,35 +7720,38 @@ pre {
 
   .offset-xl-11 {
     margin-left: 91.6666666667%; } }
-.table {
+.table, .main-text-container .post-table table {
   width: 100%;
   max-width: 100%;
   margin-bottom: 1rem;
   background-color: transparent; }
-  .table th,
-  .table td {
+  .table th, .main-text-container .post-table table th,
+  .table td,
+  .main-text-container .post-table table td {
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #dee2e6; }
-  .table thead th {
+  .table thead th, .main-text-container .post-table table thead th {
     vertical-align: bottom;
     border-bottom: 2px solid #dee2e6; }
-  .table tbody + tbody {
+  .table tbody + tbody, .main-text-container .post-table table tbody + tbody {
     border-top: 2px solid #dee2e6; }
-  .table .table {
+  .table .table, .main-text-container .post-table table .table, .table .main-text-container .post-table table, .main-text-container .post-table .table table, .main-text-container .post-table table table {
     background-color: #fff; }
 
 .table-sm th,
 .table-sm td {
   padding: 0.3rem; }
 
-.table-bordered {
+.table-bordered, .main-text-container .post-table table {
   border: 1px solid #dee2e6; }
-  .table-bordered th,
-  .table-bordered td {
+  .table-bordered th, .main-text-container .post-table table th,
+  .table-bordered td,
+  .main-text-container .post-table table td {
     border: 1px solid #dee2e6; }
-  .table-bordered thead th,
-  .table-bordered thead td {
+  .table-bordered thead th, .main-text-container .post-table table thead th,
+  .table-bordered thead td,
+  .main-text-container .post-table table thead td {
     border-bottom-width: 2px; }
 
 .table-striped tbody tr:nth-of-type(odd) {
@@ -7851,11 +7859,11 @@ pre {
   .table-hover .table-active:hover > th {
     background-color: rgba(0, 0, 0, 0.075); }
 
-.table .thead-dark th {
+.table .thead-dark th, .main-text-container .post-table table .thead-dark th {
   color: #fff;
   background-color: #212529;
   border-color: #32383e; }
-.table .thead-light th {
+.table .thead-light th, .main-text-container .post-table table .thead-light th {
   color: #495057;
   background-color: #e9ecef;
   border-color: #dee2e6; }
@@ -7867,7 +7875,7 @@ pre {
   .table-dark td,
   .table-dark thead th {
     border-color: #32383e; }
-  .table-dark.table-bordered {
+  .table-dark.table-bordered, .main-text-container .post-table table.table-dark {
     border: 0; }
   .table-dark.table-striped tbody tr:nth-of-type(odd) {
     background-color: rgba(255, 255, 255, 0.05); }
@@ -7881,7 +7889,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-sm > .table-bordered {
+    .table-responsive-sm > .table-bordered, .main-text-container .post-table .table-responsive-sm > table {
       border: 0; } }
 @media (max-width: 767.98px) {
   .table-responsive-md {
@@ -7890,7 +7898,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-md > .table-bordered {
+    .table-responsive-md > .table-bordered, .main-text-container .post-table .table-responsive-md > table {
       border: 0; } }
 @media (max-width: 991.98px) {
   .table-responsive-lg {
@@ -7899,7 +7907,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-lg > .table-bordered {
+    .table-responsive-lg > .table-bordered, .main-text-container .post-table .table-responsive-lg > table {
       border: 0; } }
 @media (max-width: 1199.98px) {
   .table-responsive-xl {
@@ -7908,7 +7916,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-xl > .table-bordered {
+    .table-responsive-xl > .table-bordered, .main-text-container .post-table .table-responsive-xl > table {
       border: 0; } }
 .table-responsive {
   display: block;
@@ -7916,7 +7924,7 @@ pre {
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar; }
-  .table-responsive > .table-bordered {
+  .table-responsive > .table-bordered, .main-text-container .post-table .table-responsive > table {
     border: 0; }
 
 .form-control {
@@ -13003,14 +13011,16 @@ a.text-dark:hover, a.text-dark:focus {
   .badge {
     border: 1px solid #000; }
 
-  .table {
+  .table, .main-text-container .post-table table {
     border-collapse: collapse !important; }
-    .table td,
-    .table th {
+    .table td, .main-text-container .post-table table td,
+    .table th,
+    .main-text-container .post-table table th {
       background-color: #fff !important; }
 
-  .table-bordered th,
-  .table-bordered td {
+  .table-bordered th, .main-text-container .post-table table th,
+  .table-bordered td,
+  .main-text-container .post-table table td {
     border: 1px solid #ddd !important; } }
 /*!
  * Bootstrap v4.0.0 (https://getbootstrap.com)
@@ -14222,35 +14232,38 @@ pre {
 
   .offset-xl-11 {
     margin-left: 91.6666666667%; } }
-.table {
+.table, .main-text-container .post-table table {
   width: 100%;
   max-width: 100%;
   margin-bottom: 1rem;
   background-color: transparent; }
-  .table th,
-  .table td {
+  .table th, .main-text-container .post-table table th,
+  .table td,
+  .main-text-container .post-table table td {
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #dee2e6; }
-  .table thead th {
+  .table thead th, .main-text-container .post-table table thead th {
     vertical-align: bottom;
     border-bottom: 2px solid #dee2e6; }
-  .table tbody + tbody {
+  .table tbody + tbody, .main-text-container .post-table table tbody + tbody {
     border-top: 2px solid #dee2e6; }
-  .table .table {
+  .table .table, .main-text-container .post-table table .table, .table .main-text-container .post-table table, .main-text-container .post-table .table table, .main-text-container .post-table table table {
     background-color: #fff; }
 
 .table-sm th,
 .table-sm td {
   padding: 0.3rem; }
 
-.table-bordered {
+.table-bordered, .main-text-container .post-table table {
   border: 1px solid #dee2e6; }
-  .table-bordered th,
-  .table-bordered td {
+  .table-bordered th, .main-text-container .post-table table th,
+  .table-bordered td,
+  .main-text-container .post-table table td {
     border: 1px solid #dee2e6; }
-  .table-bordered thead th,
-  .table-bordered thead td {
+  .table-bordered thead th, .main-text-container .post-table table thead th,
+  .table-bordered thead td,
+  .main-text-container .post-table table thead td {
     border-bottom-width: 2px; }
 
 .table-striped tbody tr:nth-of-type(odd) {
@@ -14358,11 +14371,11 @@ pre {
   .table-hover .table-active:hover > th {
     background-color: rgba(0, 0, 0, 0.075); }
 
-.table .thead-dark th {
+.table .thead-dark th, .main-text-container .post-table table .thead-dark th {
   color: #fff;
   background-color: #212529;
   border-color: #32383e; }
-.table .thead-light th {
+.table .thead-light th, .main-text-container .post-table table .thead-light th {
   color: #495057;
   background-color: #e9ecef;
   border-color: #dee2e6; }
@@ -14374,7 +14387,7 @@ pre {
   .table-dark td,
   .table-dark thead th {
     border-color: #32383e; }
-  .table-dark.table-bordered {
+  .table-dark.table-bordered, .main-text-container .post-table table.table-dark {
     border: 0; }
   .table-dark.table-striped tbody tr:nth-of-type(odd) {
     background-color: rgba(255, 255, 255, 0.05); }
@@ -14388,7 +14401,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-sm > .table-bordered {
+    .table-responsive-sm > .table-bordered, .main-text-container .post-table .table-responsive-sm > table {
       border: 0; } }
 @media (max-width: 767.98px) {
   .table-responsive-md {
@@ -14397,7 +14410,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-md > .table-bordered {
+    .table-responsive-md > .table-bordered, .main-text-container .post-table .table-responsive-md > table {
       border: 0; } }
 @media (max-width: 991.98px) {
   .table-responsive-lg {
@@ -14406,7 +14419,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-lg > .table-bordered {
+    .table-responsive-lg > .table-bordered, .main-text-container .post-table .table-responsive-lg > table {
       border: 0; } }
 @media (max-width: 1199.98px) {
   .table-responsive-xl {
@@ -14415,7 +14428,7 @@ pre {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar; }
-    .table-responsive-xl > .table-bordered {
+    .table-responsive-xl > .table-bordered, .main-text-container .post-table .table-responsive-xl > table {
       border: 0; } }
 .table-responsive {
   display: block;
@@ -14423,7 +14436,7 @@ pre {
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar; }
-  .table-responsive > .table-bordered {
+  .table-responsive > .table-bordered, .main-text-container .post-table .table-responsive > table {
     border: 0; }
 
 .form-control {
@@ -19510,14 +19523,16 @@ a.text-dark:hover, a.text-dark:focus {
   .badge {
     border: 1px solid #000; }
 
-  .table {
+  .table, .main-text-container .post-table table {
     border-collapse: collapse !important; }
-    .table td,
-    .table th {
+    .table td, .main-text-container .post-table table td,
+    .table th,
+    .main-text-container .post-table table th {
       background-color: #fff !important; }
 
-  .table-bordered th,
-  .table-bordered td {
+  .table-bordered th, .main-text-container .post-table table th,
+  .table-bordered td,
+  .main-text-container .post-table table td {
     border: 1px solid #ddd !important; } }
 body {
   margin-top: 1rem;
