--- a/scss/custom_highlight_hljs.scss
+++ b/scss/custom_highlight_hljs.scss
@@ -21,7 +21,7 @@ code {
             padding: 7px 9px;
         }
 
-        margin: 0rem 0rem $paragraph-margin-bottom;
+        margin: 0;
         // /* See https://stackoverflow.com/questions/12403998/border-is-cutting-off-when-using-border-radius */
         // overflow: hidden;
         // /* See https://forum.webflow.com/t/safari-not-hiding-overflow-on-rounded-corner-divs/55060/2 */
