--- a/themes/gron/layouts/tags/list.html
+++ b/themes/gron/layouts/tags/list.html
@@ -10,7 +10,7 @@
 <main role="main">
     <div class="container pb-2">
         <div class="row small-button-list">
-            <div class="col-md-8 col-12">
+            <div class="col-12">
                 Tags: &nbsp;
 
                 {{- $tag := .Param "tag" -}}
@@ -71,7 +71,7 @@
         {{- end -}}
 
         <div class="row small-button-list">
-            <div class="col-md-8 col-12">
+            <div class="col-12">
                 Years: &nbsp;
                 {{ $currYear := "" }}
                 {{ range $pagesToShow }}
