--- a/themes/gron/layouts/partials/meta_head.html
+++ b/themes/gron/layouts/partials/meta_head.html
@@ -60,7 +60,7 @@ window.MathJax = {
     displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
     processEscapes: true,
     tagSide: "right",
-    tagIndent: '1rem',
+    tagIndent: "1rem",
     multlineWidth: "85%",
     tags: "ams"
   },
